# ATHENA-CODER

./: .gitignore  ATHENA.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Modelfile.troof-coder  Modelfile.troofevades-q35-athena  OCODE.md  PHASE_1_BASELINE.md  PRODUCTION_TEST_PLAN.md  README.md  REFACTOR_PLAN.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RUNBOOK.md  TUI_SPRINT.md  compressor-pytest.txt  pyproject.toml  pytest-out.txt
.github/: dependabot.yml
.github/workflows/: coverage.yml  lint.yml  osv-scanner.yml  publish.yml  supply-chain.yml  tests.yml
athena/: __init__.py  __main__.py  _owl_art.txt  boot_trace.py  config.py  config_deprecations.py  config_sections.py  crash_log.py  env.py  event_log.py  hooks.py  interrupt_hooks.py  net.py  ollama_client.py  provenance.py  text_utils.py  ui.py
athena/_tui_bundle/: main.js  package-lock.json  package.json
athena/acp/: __init__.py  capabilities.py  methods.py  server.py  slash_commands.py  streaming.py
athena/agent/: __init__.py  auxiliary_client.py  checkpoints.py  context.py  context_compressor.py  core.py  fork.py  goal_integration.py  lifecycle.py  media_artifacts.py  param_policy.py  progress.py  prompt_caching.py  runtime.py  stats.py  tool_relay.py
athena/audio/: __init__.py  job.py  tools.py
athena/audit/: __init__.py  content.py  diff.py  timestamps.py
athena/batch/: __init__.py  manifest.py  runner.py
athena/browser/: capture.py  session.py  tools.py
athena/cache/: __init__.py  cross_session.py
athena/cli/: __init__.py  acp.py  audit.py  batch.py  cache.py  checkpoint.py  cleanup_blobs.py  cron.py  curator.py  delegate.py  doctor.py  eval.py  gateway.py  image_demo.py  import_hermes.py  mcp.py  memory.py  model.py  plugins.py  profile.py  providers.py  proxy.py  recall.py  reindex.py  repl.py  rollback.py  sessions.py  skill.py  snapshot.py  status.py  theme.py  train.py  verify.py  webhook.py  wordmark.py
athena/commands/: __init__.py  board.py  checkpoint.py  checkpoint_cmds.py  clear.py  clear_cmd.py  compact.py  computer.py  cost.py  cost_cmd.py  cwd.py  cwd_cmd.py  dump.py  dump_cmd.py  goal.py  godmode.py  help.py  help_cmd.py  hooks.py  hooks_cmd.py  init.py  loop.py  mcp.py  mcp_cmd.py  memory.py  memory_command.py  model.py  models.py  plan.py  plan_command.py  resume.py  review.py  save.py  skill.py  skill_cmd.py  status.py  status_cmd.py  steer.py  theme.py  theme_cmd.py  (+4 more)
athena/computer/: RECON.md  __init__.py  audit.py  contract.py  detect.py  killswitch.py  loop.py  permission.py  tools.py
athena/cron/: delivery.py  jobs.py  runner.py  scheduler.py  watchdog.py
athena/curator/: __init__.py  dry_run.py  orchestrator.py  prompts.py  reconciliation.py  reports.py  state.py  yaml_output.py
athena/delegate/: __init__.py  adapter.py  cli.py  codex.py
athena/document/: __init__.py  result.py  tools.py
athena/eval/: __init__.py  runner.py  scorers.py  summary.py
athena/gateway/: __init__.py  agent_factory.py  agent_pool.py  approval_routing.py  base.py  continuity.py  credentials.py  daemon.py  events.py  healing.py  heartbeat.py  registry.py  router.py
athena/goal/: LOOP_NOTES.md  invariant.py  loop.py  state.py
athena/headless/: __init__.py  result.py  runner.py
athena/jailbreak/: __init__.py  autoscore.py  prompts.py  race.py
athena/lsp/: __init__.py  client.py
athena/mcp/: __init__.py  client.py  demo_server.py  differentiated.py  loader.py  oauth.py  request_log.py  resources.py  server.py  sse_transport.py  tools.py  transport_resolver.py  transport_stdio.py
athena/media/: __init__.py  registry.py
athena/memory/: __init__.py  store.py
athena/migration/: __init__.py  config_translator.py  hermes_import.py  mcp_translator.py  memory_exporter.py  report.py  sessions_importer.py  skills_mapper.py
athena/ocr/: __init__.py  contract.py  tools.py
athena/plugins/: base.py  discovery.py  hooks.py  loader.py  manifest.py
athena/profiles/: __init__.py  manager.py  migration.py  resolution.py
athena/prompts/: __init__.py  system.py
athena/providers/: CAPABILITY_NOTES.md  __init__.py  anthropic.py  base.py  codex.py  credential_pool.py  error_classifier.py  google.py  nous.py  ollama.py  openai.py  openai_compat.py  openrouter.py  rate_limit_tracker.py  retry_utils.py  runtime_resolver.py  schema_sanitizer.py  social.py  xai.py
athena/proxy/: RECON.md  __init__.py  logging.py  router.py  server.py  translate.py  translator.py
athena/recall/: __init__.py  embeddings.py  hybrid.py  manager.py  vector_store.py
athena/review/: __init__.py  nudge.py  orchestrator.py  prompts.py  summary.py
athena/safety/: __init__.py  approval_callback.py  approval_guard.py  audit.py  context.py  mutation.py  osv.py  path_security.py  secure_files.py  shell_policy.py  snapshots.py  thread_entry.py  tirith.py  url_safety.py
athena/sandbox/: RECON.md  __init__.py  bwrap.py  runner.py
athena/sessions/: __init__.py  jsonl.py  reindex.py  sqlite_index.py  (+1 more)
docs/: goal-verifier-summary.md  hermes-skill-gap-analysis.md  manual-test-suite.md  release.md
examples/: mcp.json
ocode/: __init__.py  __main__.py  agent.py  config.py  hooks.py  memory.py  ollama_client.py  provenance.py  ui.py
scripts/: analyze_tui.py  color_swatch.py  debug_gateway.py  preview_owl.py  preview_tui.py  release.py  setup.ps1  setup.sh  verify_version.py
tests/: conftest.py  test_approval_callback.py  test_ci_surface.py  test_config_dataclass_merge.py  test_config_host_normalize.py  test_config_load.py  test_crash_log.py  test_env.py  test_event_log.py  test_false_refusal.py  test_fork.py  test_fork_full.py  test_hooks_plugin_ordering.py  test_hooks_shim_removed.py  test_interrupt_hooks.py  test_model_name.py  test_narrated_intent.py  test_net.py  test_no_personal_paths.py  test_prompts.py  test_provenance.py  test_readme_quickstart.py  test_slash_dump.py  test_text_utils.py  test_tool_result_pretty.py  test_tool_result_summarize.py  test_toolsets.py  test_ui_muted.py  test_ui_theme.py
transform/: Modelfile  PIPELINE.md  README.md
ui-tui/: .gitignore  build.ts  package.json  tsconfig.json
(+865 files in other folders)
