[project]
name = "athena"
version = "0.2.0"
description = "Self-improving terminal-first AI agent with closed training loop"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "freezegun>=1.4",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Heavy GPU-only deps for the closed training loop. Install with
# ``pip install -e ".[train]"`` only on a workstation with CUDA.
train = [
    "trl>=0.11",
    "peft>=0.11",
    "transformers>=4.42",
    "datasets>=2.20",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
]

[project.scripts]
athena = "athena.__main__:main"
# Legacy alias; remove one release after the rename lands.
ocode = "athena.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["athena*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["athena"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
