[project]
name = "athena"
version = "0.2.0"
description = "Self-improving terminal-first AI agent with closed training loop"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-cov>=4.1",
    "freezegun>=1.4",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Platform SDKs for ``athena gateway run``. Optional so a headless
# install (CLI-only, no chat exposure) doesn't pull them in.
gateway = [
    "aiogram>=3.0",
    "slack-sdk>=3.27",
    "discord.py>=2.4",
    # Phase 11 additional platforms
    "python-socketio[asyncio_client]>=5.10",  # BlueBubbles bridge speaks socket.io v4
    "matrix-nio[e2e]>=0.24",
    "aioimaplib>=2.0",
    "aiosmtplib>=3.0",
    "beautifulsoup4>=4.12",
    # Phase 15 webhooks — aiohttp is also pulled by slack-sdk's
    # Socket Mode but list it explicitly so a future slack-sdk dep
    # change can't quietly remove it.
    "aiohttp>=3.9",
]
# Observability — OpenTelemetry SDK + JSON logging. Optional because
# the SDK pulls a meaningful chunk of transitive deps (protobuf,
# grpcio fallback paths) that headless installs don't need.
observability = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.42.0",
    "python-json-logger>=2.0",
]
# Heavy GPU-only deps for the closed training loop. Install with
# ``pip install -e ".[train]"`` only on a workstation with CUDA.
train = [
    "trl>=0.11",
    "peft>=0.11",
    "transformers>=4.42",
    "datasets>=2.20",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
]

[project.scripts]
athena = "athena.__main__:main"
# Legacy alias; remove one release after the rename lands.
ocode = "athena.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["athena*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# T1-01 baseline. Each entry below has 1+ existing violation in
# athena/ or tests/; cleanup is staged for T1-04 (each rule flipped
# back on after its violations are fixed, one PR per rule).
ignore = [
    "E501",   # line-too-long (100-col cap; over-cap lines deliberate)
    "E402",   # module-import-not-at-top (defensive ordering in places)
    "E741",   # ambiguous variable name
    "F401",   # unused-import (re-exports w/o __all__ trip this)
    "F841",   # unused-variable
    "B007",   # unused loop control variable
    "B017",   # assert-raises-Exception
    "B024",   # ABC without abstract method
    "B027",   # empty method in ABC without @abstractmethod
    "B039",   # mutable contextvar default
    "B904",   # raise-from-inside-except
    "B905",   # zip-without-strict
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["athena"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
