[project]
# Distribution name on PyPI ("pip install athena-coder"). The Python
# import name stays `athena` and the installed shims are still
# `athena` / `ocode` — distribution and import names are allowed to
# differ (cf. `pip install pyyaml` → `import yaml`). `athena` and
# `athena-agent` were both occupied by unrelated projects.
name = "athena-coder"
version = "0.3.0"
description = "Self-improving terminal-first AI agent with closed training loop"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "troofevades", email = "troofevades@gmail.com" },
]
keywords = [
    "ai",
    "agent",
    "claude",
    "ollama",
    "coding",
    "terminal",
    "tui",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Terminals",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.3",
    "freezegun>=1.4",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
# Platform SDKs for ``athena gateway run``. Optional so a headless
# install (CLI-only, no chat exposure) doesn't pull them in.
gateway = [
    "aiogram>=3.0",
    "slack-sdk>=3.27",
    "discord.py>=2.4",
    # Phase 11 additional platforms
    "python-socketio[asyncio_client]>=5.10",  # BlueBubbles bridge speaks socket.io v4
    "matrix-nio[e2e]>=0.24",
    "aioimaplib>=2.0.1",
    "aiosmtplib>=3.0",
    "beautifulsoup4>=4.12",
    # Phase 15 webhooks — aiohttp is also pulled by slack-sdk's
    # Socket Mode but list it explicitly so a future slack-sdk dep
    # change can't quietly remove it.
    "aiohttp>=3.9",
]
# `athena proxy` — local OpenAI-compatible HTTP endpoint (T3-01).
# Retargeted in T3-01R onto aiohttp (already pulled by the gateway
# extra) so no new server deps are required for the proxy itself.
# Kept as a named extra for forward compatibility — installing
# `[proxy]` ensures aiohttp is present even on headless installs
# that don't pull `[gateway]`.
proxy = [
    "aiohttp>=3.9",
]
# Observability — OpenTelemetry SDK + JSON logging. Optional because
# the SDK pulls a meaningful chunk of transitive deps (protobuf,
# grpcio fallback paths) that headless installs don't need.
observability = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.42.0",
    "python-json-logger>=2.0",
]
# Persistent CDP browser tools (T4-03) — Playwright for the
# Chrome DevTools Protocol session that survives across tool
# calls within one athena session. Optional because a headless
# install doesn't need it; install with
# ``pip install -e ".[browser]"`` and ``playwright install
# chromium`` to fetch the browser binary.
browser = [
    "playwright>=1.40",
]
# Vision analysis (T4-01) — Pillow for pixel ops (EXIF / ELA /
# crop / histogram), imagehash for pHash/dHash perceptual
# fingerprints. Optional because a headless install (text-only
# chat) doesn't need image deps. piexif is a Pillow fallback for
# EXIF reads on legacy formats — documented in
# docs/reference/vision-analyze.md. `exiftool` is an external
# binary (perl); also documented as optional.
vision = [
    "Pillow>=10",
    "imagehash>=4.3",
]
# Local text-to-speech (Discord-voice design, Phase 1). Optional: the
# ``tts_piper_local`` backend reports unavailable without it, and the
# synthesis path degrades gracefully. The ``tts_stub`` backend needs
# nothing. Install with ``pip install -e ".[tts]"``.
tts = [
    "piper-tts>=1.2",
]
# Discord voice chat (Discord-voice design, Phases 3-4). Adds voice
# transport + receive (mainline discord.py has no voice *receive*),
# utterance segmentation, and local TTS. Optional: without it
# ``/voice join`` reports unavailable and the text gateway is unaffected.
gateway-voice = [
    "discord.py[voice]>=2.4",
    "discord-ext-voice-recv>=0.4",
    # Prebuilt-wheel fork of webrtcvad (the original is a C extension that
    # needs a compiler on Windows). Provides the same `import webrtcvad`.
    # Optional anyway — the voice core falls back to a dependency-free
    # energy-based VAD when it's absent.
    "webrtcvad-wheels>=2.0",
    "piper-tts>=1.2",        # local TTS (speak)
    "faster-whisper>=1.0",   # local STT (listen) — the audio-transcription backend
]
# Heavy GPU-only deps for the closed training loop. Install with
# ``pip install -e ".[train]"`` only on a workstation with CUDA.
train = [
    # Labeling TUI (T3-05R) — small, terminal-only.
    "textual>=0.40",
    "trl>=0.11",
    "peft>=0.11",
    "transformers>=4.42",
    "datasets>=2.20",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
]

[project.urls]
Homepage = "https://github.com/troofevades-rgb/ATHENA-AGENT"
Repository = "https://github.com/troofevades-rgb/ATHENA-AGENT"
Issues = "https://github.com/troofevades-rgb/ATHENA-AGENT/issues"
Changelog = "https://github.com/troofevades-rgb/ATHENA-AGENT/blob/master/CHANGELOG.md"

[project.scripts]
athena = "athena.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["athena*"]

# Ship non-Python assets the package reads at runtime:
#   - _owl_art.txt          ASCII owl rendered in the startup banner
#   - _tui_bundle/main.js   the React + Ink TUI bundle (built from
#                           ui-tui/ via `bun run build`). Shipping
#                           the pre-built JS means end users don't
#                           need Node + bun + a TypeScript toolchain
#                           to run athena's interactive REPL; they
#                           only need a ``node`` runtime to execute
#                           the bundle.
[tool.setuptools.package-data]
athena = [
    "_owl_art.txt",
    "_owl_image.jpg",
    "_tui_bundle/main.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
# Per-test timeout (pytest-timeout). 60s is generous for unit tests
# and forces CI to surface hangs as a clear failure with a stack
# trace instead of timing out the GHA runner. Tests that genuinely
# need longer can mark themselves with @pytest.mark.timeout(N).
timeout = 60
timeout_method = "thread"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# T1-01 baseline. Each entry below has 1+ existing violation in
# athena/ or tests/; cleanup is staged for T1-04 (each rule flipped
# back on after its violations are fixed, one PR per rule).
ignore = [
    "E501",   # line-too-long (100-col cap; over-cap lines deliberate)
    "E402",   # module-import-not-at-top (defensive ordering in places)
    "E741",   # ambiguous variable name
    "F401",   # unused-import (re-exports w/o __all__ trip this)
    "F841",   # unused-variable
    "B007",   # unused loop control variable
    "B017",   # assert-raises-Exception
    "B024",   # ABC without abstract method
    "B027",   # empty method in ABC without @abstractmethod
    "B039",   # mutable contextvar default
    "B904",   # raise-from-inside-except
    "B905",   # zip-without-strict
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["athena"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Optional / untyped third-party modules with no usable stubs — loaded
# lazily behind the ``[vision]`` / ``[tts]`` / ``[gateway-voice]`` /
# ``[observability]`` extras (so absent in the CI mypy env), or version-gated
# stdlib. The in-tree code guards every use with is_available()/try-except.
[[tool.mypy.overrides]]
module = [
    "webrtcvad",
    "piper",
    "piper.*",
    "discord.ext.voice_recv",
    "discord.ext.voice_recv.*",
    # gateway-voice receive/decrypt + TTS engines
    "davey",
    "nacl",
    "nacl.*",
    "kokoro_onnx",
    "numpy",
    "faster_whisper",
    # vision
    "PIL",
    "PIL.*",
    "imagehash",
    "piexif",
    # observability / matrix-e2e
    "pythonjsonlogger",
    "pythonjsonlogger.*",
    "olm",
    "nio",
    "nio.*",
    # OCR / PDF document extraction
    "pytesseract",
    "fitz",
    # other untyped runtime deps (gateway transports + scheduler)
    "socketio",
    "socketio.*",
    "aioimaplib",
    "apscheduler",
    "apscheduler.*",
    # py3.11+ stdlib, but mypy targets 3.10 (tomli is the 3.10 fallback)
    "tomllib",
]
ignore_missing_imports = true
